Fixed placeholder color in dark mode

--- a/src/sass/color-schemes/_dark.scss
+++ b/src/sass/color-schemes/_dark.scss
@@ -24,6 +24,7 @@ body.dark {
 
   /* Shopping list */
   --card-bg-color: #{$blackish};
+  --empty-list-text-color: rgba(255, 255, 255, 0.6);
 
   /* Auth form */
   --form-field-bg-color: #9d9c9a;
